--- a/src/components/HomePage/Hero.css
+++ b/src/components/HomePage/Hero.css
@@ -191,8 +191,8 @@
     .hero-desc {
         font-size: 18px;
         color: black;
-        width: 100%;
         margin-bottom: 0px;
+        width: auto;
     }
 }
 
