made some redesigning on the login page as well as the sign up page, commenting is nnow working without needing to refresh the page, new popups on the commenting page to ease the login or signup, avatars added to the storage now you can choose your own.

--- a/src/components/Blog.css
+++ b/src/components/Blog.css
@@ -211,6 +211,9 @@
 }
 
 @media only screen and (max-width: 500px) {
+    .blog {
+        margin-top: 60px;
+    }
     .blog-mainimgbox {
         height: 350px;
     }
