--- a/src/components/Comments/Reply.css
+++ b/src/components/Comments/Reply.css
@@ -38,6 +38,8 @@
 .replypop > h2 {
     font-size: 20px;
     font-weight: 400;
+    padding-bottom: 20px;
+    text-align: center;
 }
 
 .replypop > h2 > span {
@@ -50,7 +52,7 @@
     font-size: 16px;
     height: 40px;
     width: 100%;
-    margin-block: 20px;
+    margin-bottom: 20px;
     border: none;
     border-bottom: 2px solid gray;
     background-color: inherit;
