fixed blog date not showng properly, comment section improvements, popup redesigns, login redesign, signup redesign, avatar selection redesign, comments added, made the code more readable

--- a/src/components/AllBlogs/AllBlogs.css
+++ b/src/components/AllBlogs/AllBlogs.css
@@ -18,7 +18,7 @@
     font-family: 'Montserrat', sans-serif;
     padding: 0;
     border: none;
-    background-color: whitesmoke;
+    background-color: rgb(234, 234, 234);
     cursor: pointer;
     transition-duration: 0.4s;
 }
@@ -81,7 +81,7 @@
 }
 
 .allblogs-odd {
-    background-color: whitesmoke;
+    background-color: rgb(234, 234, 234);
     display: flex;
     justify-content: center;
     align-items: center;
