--- a/src/components/Comments/Reply.css
+++ b/src/components/Comments/Reply.css
@@ -20,29 +20,46 @@
 }
 
 .replypop {
-    padding: 20px;
-    height: 200px;
+    margin-top: 120px;
+    position: fixed;
     width: 100%;
-    max-width: 600px;
-    min-width: 250px;
+    max-width: 500px;
+    height: 60%;
+    max-height: 350px;
+    top: 0;
     margin-inline: 10%;
-    background-color: #F2F2F2;
-    border-radius: 20px;
-    z-index: 2;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
+    justify-content: flex-start;
+    background-color: white;
+    box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset, rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+    z-index: 3;
+    overflow: auto;
+}
+.replypop > h2 {
+    padding-inline: 40px;
+    text-align: center;
+    padding-top: 40px;
+    font-weight: 400;
 }
 
-.replypop > h2 {
+.replypop-title {
+    width: 100%;
+    background-color: rgb(225, 225, 225);
+    padding: 20px;
+    padding-left: 50px;
+}
+
+.replypop-title > h2 {
     font-size: 20px;
     font-weight: 400;
-    padding-bottom: 20px;
-    text-align: center;
+    padding-bottom: 0px;
+    text-align: left;
+
 }
 
-.replypop > h2 > span {
+.replypop-title > h2 > span {
     color: #458C78;
     font-weight: 600;
 }
@@ -51,29 +68,32 @@
     font-family: 'Montserrat', sans-serif;
     font-size: 16px;
     height: 40px;
-    width: 100%;
-    margin-bottom: 20px;
-    border: none;
-    border-bottom: 2px solid gray;
+    width: 80%;
+    margin-top: 40px;
+    border: 1px solid gray;
     background-color: inherit;
     padding-inline: 20px;
+    padding-block: 20px;
 }
 
 .reply-buttons {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
+    width: 70%;
+    margin: 0;
+    margin-bottom: 40px;
+    margin-top: 40px;
 }
 
 .reply-buttons > button {
-    height: 30px;
-    width: 100px;
-    margin-inline: 10px;
+    margin: 0;
+    height: 40px;
+    width: 150px;
     font-family: 'Montserrat', sans-serif;
     font-size: 14px;
     cursor: pointer;
     transition-duration: 0.4s;
-    border-radius: 10px;
 }
 
 .reply-button-cancel {
@@ -88,12 +108,29 @@
 }
 
 .reply-button-reply {
-    background-color: inherit;
-    color: #458C78;
     border: 1px solid #458C78;
+    background-color: #458C78;
+    color: white;
 }
 
 .reply-button-reply:hover {
-    background-color: #458C78;
-    color: white;
+    background-color: transparent;
+    color: #458C78;
+}
+
+@media only screen and (max-width: 500px) {
+    .replypop {
+        max-height: 300px;
+    }
+    .replypop > input {
+        height: 40px;
+        margin-top: 20px;
+    }
+    .reply-buttons > button {
+        width: 120px;
+    }
+    .reply-buttons {
+        margin-bottom: 20px;
+        margin-top: 20px;
+    }
 }
