--- a/src/components/Header/Login.css
+++ b/src/components/Header/Login.css
@@ -44,6 +44,9 @@
 
 .login {
     max-width: 800px;
+    flex-direction: column;
+    align-items: flex-start;
+    max-width: 450px;
     width: 100%;
     margin-bottom: 80px;
     margin-inline: 10%;
@@ -55,33 +58,28 @@
 .loginpop {
     margin-top: 120px;
     position: fixed;
-    width: 60%;
+    width: 100%;
     height: 70%;
+    max-width: 450px;
     top: 0;
     margin-inline: 10%;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     background-color: white;
     box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset, rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
     z-index: 3;
     overflow: auto;
 }
 
-.login-box1 {
-    width: 30%;
-    padding: 30px;
-    background-color: #458C78;
-    color: white;
-}
-
 .login-box1pop {
     width: 100%;
     display: flex;
     justify-content: flex-end;
-    background-color: rgb(208, 208, 208);
+    background-color: #458C78;
     position: sticky;
     top: 0;
+    z-index: 6;
 }
 
 .login-box1pop > button {
@@ -93,23 +91,23 @@
 }
 
 .login-box1pop > button > img {
-    filter: opacity(30%);
+    filter: brightness(0) invert(1) opacity(100%);
     height: 30px;
     transition-duration: 0.4s;
 }
 
 .login-box1pop > button:hover > img {
-    filter: opacity(80%);
+    filter: brightness(0) invert(1) opacity(50%);
 }
 
 .login-box2 {
-    width: 70%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
     padding: 30px;
-
+    box-shadow: -10px 0px #458C78;
 }
 
 .login-google {
@@ -154,9 +152,19 @@
     max-width: 400px;
 }
 
+.login-box2 > h1 {
+    font-weight: 500;
+    font-size: 40px;
+    margin-top: 0px;
+    margin-bottom: 10px;
+    color: #458C78;
+}
+
 .login-box2 > h2 {
     margin: 0;
-    padding-bottom: 30px;
+    padding-bottom: 50px;
+    font-weight: 400;
+    font-size: 14px;
 }
 
 .login-box2 > h3 {
@@ -243,34 +251,6 @@
     color: #458C78;
 }
 
-@media only screen and (max-width: 880px) {
-    .login-box1 {
-        width: 100%;
-    }
-    .login-box2 {
-        width: 100%;
-    }
-    .login {
-        flex-direction: column;
-        align-items: flex-start;
-        max-width: 450px;
-    }
-    .loginpop {
-        flex-direction: column;
-        align-items: flex-start;
-    }
-    .login-box1 {
-        padding: 30px;
-        height: 100px;
-        display: flex;
-        justify-content: flex-start;
-        align-items: center;
-    }
-    .login-box1 > h1 {
-        font-size: 25px;
-    }
-}
-
 @media only screen and (max-width: 600px) {
     .loginpop {
         width: 90%;
@@ -285,6 +265,18 @@
         margin-top: 100px;
     }
     .loginpage {
-        padding-top: 20px;
+        margin-top: 60px;
+        padding-top: 0px;
+    }
+    .login {
+        max-width: 100%;
+        padding-top: 40px;
+        margin-inline: 0px;
+        padding-bottom: 40px;
+        margin-bottom: 0px;
+    }
+    .login-back {
+        background-image: none;
+        background-color: white;
     }
 }
