--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -7,14 +7,11 @@
 }
 
 .footer-grid {
-    /* display: grid; */
     min-height: 350px;
-    /* grid-template-columns: repeat(4, 1fr); */
     margin-inline: 10%;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    /* background-color: aliceblue; */
 }
 
 .footer-column {
@@ -73,6 +70,12 @@
     border: none;
     padding: 8px;
     width: 100%;
+    background-color: rgb(46, 46, 46);
+    color: white;
+}
+
+.footer-input::placeholder {
+    color: rgb(171, 171, 171);
 }
 
 .footer-button {
