--- a/src/components/Admin/Create.css
+++ b/src/components/Admin/Create.css
@@ -79,6 +79,45 @@
     height: 200px;
 }
 
+.create-seetags {
+    margin-block: 20px;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    background-color: lightgray;
+    padding-block: 10px;
+}
+
+.create-tag {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    padding-block: 3px;
+    padding-inline: 10px;
+    border: 1px solid black;
+    margin-inline: 10px;
+    background-color: white;
+}
+
+.create-tag > p {
+    margin: 0;
+    margin-right: 10px;
+    font-size: 15px;
+    font-weight: 400;
+}
+
+.create-tag > button {
+    border: 1px solid black;
+    background-color: lightgray;
+    cursor: pointer;
+}
+
+.create-tag > button:hover {
+    background-color: whitesmoke;
+}
+
 .check {
     margin-top: 25px;
     display: flex;
