--- a/src/components/HomePage/ViewMore.css
+++ b/src/components/HomePage/ViewMore.css
@@ -8,17 +8,53 @@
     margin: 0;
     height: 80px;
     width: 100%;
-    /* border: 1.5px solid #e8e8e8;
-    background-color: #e8e8e8; */
-    border: 1.5px solid #458C78;
-    background-color: #458C78;
-    color: white;
+    border: 1.5px solid #e8e8e8;
+    background-color: #e8e8e8;
+    /* border: 1.5px solid #458C78;
+    background-color: #458C78; */
+    color: gray;
     font-family: 'Montserrat', sans-serif;
-    font-size: 23px;
+    font-size: 20px;
     font-weight: 400;
     cursor: pointer;
     transition-duration: 0.4s;
     display: flex;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
+}
+
+.viewmore-button:hover {
+    color: black;
+}
+
+.viewmore-button:hover .viewmore-arrow {
+    margin-left: 20px;
+    opacity: 100%;
+}
+
+.viewmore-text {
+    font-size: 20px;
+    font-weight: 500;
+}
+
+.viewmore-arrow {
+    opacity: 50%;
+    height: 30px;
+    margin-left: 10px;
+    transition-duration: 0.4s;
+}
+
+@media only screen and (max-width: 500px) {
+    .viewmore {
+        margin-inline: 5%;
+    }
+
+    .viewmore-text {
+        font-size: 18px;
+    }
+
+    .viewmore-arrow {
+        height: 26px;
+    }
 }
